fix(vue-pagination): add margin below emoji wrap, document in readme

--- a/demos/codepen/vue-pagination/src/style.scss
+++ b/demos/codepen/vue-pagination/src/style.scss
@@ -35,6 +35,7 @@ body {
 .emoji-wrap {
   display: flex;
   height: 128px;
+  margin-bottom: 24px;
 }
 
 .emoji {
